src/objects/Contact_Us_Type_Option__c.object
<CustomObject>
    <fields>
        <fullName>Case_Resolution_Owner__c</fullName>
        <label>Case Resolution Owner</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Resolution_Text__c</fullName>
        <description>Static text that will be displayed back to the customer, if the Case Resolution Owner is External</description>
        <label>Case Resolution Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>ZA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Created as part of //DSF-732 to sort type options</description>
        <label>Display Order</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Locale__c</fullName>
        <label>Language Locale</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>en_CA</fullName>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                </value>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>en_ZA</fullName>
                </value>
                <value>
                    <fullName>Es</fullName>
                </value>
                <value>
                    <fullName>es_US</fullName>
                </value>
                <value>
                    <fullName>fr_CA</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>Ja</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>pt</fullName>
                </value>
                <value>
                    <fullName>en_ZA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <externalId>true</externalId>
        <label>Load_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Only_for_CS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only for CS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAZN</fullName>
                </value>
                <value>
                    <fullName>Docomo</fullName>
                </value>
                <value>
                    <fullName>Non-member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sign_in_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE/FALSE value depending on whether the user needs to sign in for this case type</description>
        <label>Sign in Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ContactUs Type Option</label>
    <nameField>
        <label>Type Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ContactUs Type Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>